--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,8 @@
-Option -Multiviews
+Options -Multiviews
 
 RewriteEngine On
+RewriteBase /public/
+
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php?url=$1 [L]
+RewriteRule ^(.+)$ index.php?url=$1 [L,QSA]
